crates/mcpkit-macros/tests/compile-fail/tool_missing_description.stderr
error: missing tool attributes
       help: add description, e.g., #[tool(description = "...")]
 --> tests/compile-fail/tool_missing_description.rs:9:5
  |
9 |     #[tool]
  |     ^^^^^^^

warning: unused import: `tool`
 --> tests/compile-fail/tool_missing_description.rs:3:33
  |
3 | use mcpkit_macros::{mcp_server, tool};
  |                                 ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
